# PAX

./: .gitattributes  .gitignore  .tauriignore  BUILD_MACOS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPILOT_ENHANCEMENT_DOCUMENTATION.md  DUAL_BRANCH_QUICK_REF.md  DUAL_BRANCH_SETUP.md  GITHUB_SETUP.md  LICENSE  MAC_USER_GUIDE.md  PAX.code-workspace  PAX_CopilotInteractions_Content_Audit_Log_Processor_v1.0.0.ps1  PAX_CopilotInteractions_Content_Audit_Log_Processor_v1.1.0.ps1  PAX_Graph_Audit_Log_Processor_v0.1.0.ps1  PAX_Purview_Audit_Log_Processor_v1.10.0.ps1  PAX_Purview_Audit_Log_Processor_v1.10.1.ps1  PAX_Purview_Audit_Log_Processor_v1.10.2.ps1  PAX_Purview_Audit_Log_Processor_v1.10.4.ps1  PAX_Purview_Audit_Log_Processor_v1.10.5.ps1  PAX_Purview_Audit_Log_Processor_v1.10.6.ps1  PAX_Purview_Audit_Log_Processor_v1.10.7.ps1  PAX_Purview_Audit_Log_Processor_v1.10.8.ps1  PAX_Purview_Audit_Log_Processor_v1.10.9.ps1  PAX_Purview_Audit_Log_Processor_v1.11.1.ps1  PAX_Purview_Audit_Log_Processor_v1.11.2.ps1  PAX_Purview_Audit_Log_Processor_v1.11.3.ps1  PAX_Purview_Audit_Log_Processor_v1.11.4.ps1  PAX_Purview_Audit_Log_Processor_v1.11.5.ps1  PAX_Purview_Audit_Log_Processor_v1.5.5.ps1  PAX_Purview_Audit_Log_Processor_v1.5.8.ps1  PAX_Purview_Audit_Log_Processor_v1.5.9.ps1  PAX_Purview_Audit_Log_Processor_v1.6.0.ps1  PAX_Purview_Audit_Log_Processor_v1.7.0.ps1  PAX_Purview_Audit_Log_Processor_v1.7.1.ps1  PAX_Purview_Audit_Log_Processor_v1.7.3.ps1  PAX_Purview_Audit_Log_Processor_v1.7.4.ps1  PAX_Purview_Audit_Log_Processor_v1.8.0.ps1  (+27 more)
src-tauri/: Cargo.toml  build.rs  (+2 more)
(+185 files in other folders)
