[package]
name = "portable-audit-exporter"
version = "1.5.6"
edition = "2021"
description = "Portable Audit eXporter (PAX) - Multi-source audit log export wizard"
authors = ["Your Name"]

[dependencies]
tauri = { version = "1.8", features = [ "dialog-confirm", "custom-protocol", "path-all", "fs-all", "shell-open", "dialog-open", "dialog-save" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6.0"
anyhow = "1.0"
tokio = { version = "1.40", features= ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
regex = "1.10"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
